[package]
name = "technical_indicators"
version = "0.5.0"
authors = ["Alberto Leal <mailforalberto@gmail.com>"]
description = "Library of technical indicators in Rust."
license = "MIT"
documentation = "https://docs.rs/technical_indicators"
repository = "https://github.com/dashed/technical_indicators"
keywords = ["technical-analysis", "trading", "charts", "candlestick", "investing"]


[dev-dependencies]
json = "0.11.12"
lazy_static = "1.0"
assert_approx_eq = "1"
